[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "quat"
version = "0.1.2"
description = "collection of python methods and tools as a libary for video/image quality analysis."
authors = [ "Steve <stg7@gmx.de>",]
license = "GPL 3"

[tool.poetry.dependencies]
python = "^3.6.1"
numpy = "^1.18.2"
pandas = "^1.0.3"
scipy = "^1.4.1"
scikit-image = "^0.16.2"
scikit-learn = "^0.22.2"
opencv-python = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
do_parallel = "quat.tools.do_parallel:main"
do_parallel_by_file = "quat.tools.do_parallel_by_file:main"
extract_cuts = "quat.tools.extract_cuts:main"
psnr = "quat.tools.psnr:main"
siti = "quat.tools.siti:main"
brisque_niqe = "quat.tools.brisque_niqe:main"

[tool.poetry.dependencies.scikit-video]
git = "https://github.com/scikit-video/scikit-video.git"
branch = "master"
