[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "quat"
version = "0.1.8"
description = "collection of python methods and tools as a libary for video/image quality analysis."
authors = [ "Steve <stg7@gmx.de>",]
license = "GPL 3"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.3"
pandas = "^1.4.2"
scipy = "^1.8.0"
scikit-image = "^0.19.2"
scikit-learn = "^1.0.2"
opencv-python = "^4.5.5"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
do_parallel = "quat.tools.do_parallel:main"
do_parallel_by_file = "quat.tools.do_parallel_by_file:main"
extract_cuts = "quat.tools.extract_cuts:main"
psnr = "quat.tools.psnr:main"
siti = "quat.tools.siti:main"
brisque_niqe = "quat.tools.brisque_niqe:main"

[tool.poetry.dependencies.scikit-video]
git = "https://github.com/scikit-video/scikit-video.git"
branch = "master"
